--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.2
   flutter_animate: ^4.5.2
+  file_picker: ^9.2.1
 
 dev_dependencies:
   flutter_test:
